--- a/index.html
+++ b/index.html
@@ -13,30 +13,42 @@
     <h1 class="heading">FOCUS ON <span>TODAY</span></h1>
     <div id="background">
         <span id="first-title">TODAY</span>
-        <img class="sun" src="/images/Sun.svg" alt="sun">
+        <img class="sun" src="./images/Sun.svg" alt="sun">
         <p class="progress-label">Raise the bar by completing your goals!</p>
         
         <div class="progress-bar">
             <div class="progress-value"><span id="innerdiv">2/3 Completed</span></div>
         </div>
         <p class="error-label">Please set all the 3 goals!</p>
-        <div class="goal-container">
+
+        <div class="goal-container completed" >
             <div class="custom-checkbox">
+                <center>
+                    <img class="check-icon "src="/images/Vector 1.svg" alt="check-icon">
+                </center>
             </div>
             <input type="text" class="goal-input"  placeholder="Add a new goal..." >
         </div>
+
         <div class="goal-container">
-            <div class="custom-checkbox">
+            <div class="custom-checkbox ">
+                <center>
+                    <img class="check-icon"src="/images/Vector 1.svg" alt="check-icon">
+                </center>
             </div>
             <input type="text" class="goal-input"  placeholder="Add a new goal..." >
         </div>
+
         <div class="goal-container">
             <div class="custom-checkbox">
+                <center>
+                    <img class="check-icon"src="/images/Vector 1.svg" alt="check-icon">
+                </center>
             </div>
             <input type="text" class="goal-input"  placeholder="Add a new goal..." >
         </div>
         <p id="last-text">"Move one step ahead,today!"</p>
-        <p id="last-text2">"Made with love by Boby"</p>
+        <p id="last-text2">"Made with ❤️ by Boby"</p>
         
     </div>
    <script src="./script.js" defer></script>
