--- a/index.html
+++ b/index.html
@@ -1,56 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./index.css">
-</head>
-<body id="body">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./index.css" />
+  </head>
+  <body id="body">
     <h1 class="heading">FOCUS ON <span>TODAY</span></h1>
     <div id="background">
-        <span id="first-title">TODAY</span>
-        <img class="sun" src="./images/Sun.svg" alt="sun">
-        <p class="progress-label">Raise the bar by completing your goals!</p>
-        
-        <div class="progress-bar">
-            <div class="progress-value"><span id="innerdiv">2/3 Completed</span></div>
-        </div>
-        <p class="error-label">Please set all the 3 goals!</p>
+      <span id="first-title">TODAY</span>
+      <img class="sun" src="./images/Sun.svg" alt="sun" />
+      <p class="progress-label">Raise the bar by completing your goals!</p>
 
-        <div class="goal-container completed" >
-            <div class="custom-checkbox">
-                <center>
-                    <img class="check-icon "src="/images/Vector 1.svg" alt="check-icon">
-                </center>
-            </div>
-            <input type="text" class="goal-input"  placeholder="Add a new goal..." >
+      <div class="progress-bar">
+        <div class="progress-value">
+          <span>2/3 Completed</span>
         </div>
+        <div id="error-label-div">
+          <p class="error-label">Please set all the 3 goals!</p>
+        </div>
+      </div>
 
-        <div class="goal-container">
-            <div class="custom-checkbox ">
-                <center>
-                    <img class="check-icon"src="/images/Vector 1.svg" alt="check-icon">
-                </center>
-            </div>
-            <input type="text" class="goal-input"  placeholder="Add a new goal..." >
+      <div class="goal-container">
+        <div class="custom-checkbox">
+          <center>
+            <img
+              class="check-icon"
+              src="/images/Vector 1.svg"
+              alt="check-icon"
+            />
+          </center>
         </div>
+        <input
+          type="text"
+          id="first"
+          class="goal-input"
+          placeholder="Add a new goal..."
+        />
+      </div>
 
-        <div class="goal-container">
-            <div class="custom-checkbox">
-                <center>
-                    <img class="check-icon"src="/images/Vector 1.svg" alt="check-icon">
-                </center>
-            </div>
-            <input type="text" class="goal-input"  placeholder="Add a new goal..." >
+      <div class="goal-container">
+        <div class="custom-checkbox">
+          <center>
+            <img
+              class="check-icon"
+              src="/images/Vector 1.svg"
+              alt="check-icon"
+            />
+          </center>
         </div>
-        <p id="last-text">"Move one step ahead,today!"</p>
-        <p id="last-text2">"Made with ❤️ by Boby"</p>
-        
+        <input
+          type="text"
+          id="second"
+          class="goal-input"
+          placeholder="Add a new goal..."
+        />
+      </div>
+
+      <div class="goal-container">
+        <div class="custom-checkbox">
+          <center>
+            <img
+              class="check-icon"
+              src="/images/Vector 1.svg"
+              alt="check-icon"
+            />
+          </center>
+        </div>
+        <input
+          type="text"
+          id="third"
+          class="goal-input"
+          placeholder="Add a new goal..."
+        />
+      </div>
+      <p id="last-text">"Move one step ahead,today!"</p>
+      <p id="last-text2">"Made with ❤️ by Boby"</p>
     </div>
-   <script src="./script.js" defer></script>
-</body>
+    <script src="./script.js" defer></script>
+  </body>
 </html>
