--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <center>
             <img
               class="check-icon"
-              src="/images/Vector 1.svg"
+              src="/images/Vector 1 (1).svg"
               alt="check-icon"
             />
           </center>
@@ -51,7 +51,7 @@
           <center>
             <img
               class="check-icon"
-              src="/images/Vector 1.svg"
+              src="/images/Vector 1 (1).svg"
               alt="check-icon"
             />
           </center>
@@ -69,7 +69,7 @@
           <center>
             <img
               class="check-icon"
-              src="/images/Vector 1.svg"
+              src="/images/Vector 1 (1).svg"
               alt="check-icon"
             />
           </center>
