--- a/index.html
+++ b/index.html
@@ -31,11 +31,7 @@
       <div class="goal-container">
         <div class="custom-checkbox">
           <center>
-            <img
-              class="check-icon"
-              src="./Vector 1 (1).svg"
-              alt="check-icon"
-            />
+            <img class="check-icon" src="./Vector 1 (1).svg" alt="check-icon" />
           </center>
         </div>
         <input
@@ -49,11 +45,7 @@
       <div class="goal-container">
         <div class="custom-checkbox">
           <center>
-            <img
-              class="check-icon"
-              src="./Vector 1 (1).svg"
-              alt="check-icon"
-            />
+            <img class="check-icon" src="./Vector 1 (1).svg" alt="check-icon" />
           </center>
         </div>
         <input
@@ -67,11 +59,7 @@
       <div class="goal-container">
         <div class="custom-checkbox">
           <center>
-            <img
-              class="check-icon"
-              src="./Vector 1 (1).svg"
-              alt="check-icon"
-            />
+            <img class="check-icon" src="./Vector 1 (1).svg" alt="check-icon" />
           </center>
         </div>
         <input
@@ -81,6 +69,8 @@
           placeholder="Add a new goal..."
         />
       </div>
+
+     
       <p id="last-text">"Move one step ahead,today!"</p>
       <p id="last-text2">"Made with ❤️ by Boby"</p>
     </div>
